Fix too long grid lines in the grid decoration

BUG:467971